<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lane_and_object_detection</name>
  <version>0.0.0</version>
  <description>Node kết hợp phát hiện làn đường và vật thể bằng YOLOv8</description>

  <maintainer email="rb@todo.todo">rb</maintainer>
  <license>Apache License 2.0</license>

  <!-- Các gói cần thiết -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- Các gói kiểm thử (có thể giữ nguyên) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>